--- a/website/templates/website/policies/agreement/terms.html
+++ b/website/templates/website/policies/agreement/terms.html
@@ -310,16 +310,16 @@ suspension.</p>
 <h2>14. Governing Law</h2>
 
 <p>This site (excluding any linked sites) is controlled by us from our offices
-within Ohio, United States of America. It can be accessed from all 50
+within Nebraska, United States of America. It can be accessed from all 50
 states, as well as from other countries around the world. As each of these
-places has laws that may differ from those of Ohio, by accessing this site both
-of us agree that the statutes and laws of the State of Ohio, without regard to
+places has laws that may differ from those of Nebraska, by accessing this site both
+of us agree that the statutes and laws of the State of Nebraska, without regard to
 the conflicts of laws principles thereof and the United Nations Convention on
 the International Sales of Goods, will apply to all matters relating to the use
 of this site and the purchase of products and services available through this
 site. Each of us agrees and hereby submits to the exclusive personal
 jurisdiction and venue any court of competent jurisdiction within the State of
-Ohio with respect to such matters.</p>
+Nebraska with respect to such matters.</p>
 
 <h2>15. Notices</h2>
 
