--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -21,6 +21,8 @@
             <div class="col-xs-8 col-md-10">
                 <p>This project is partially supported by the U.S. National Science Foundation (NSF) under the following grants:</p>
                 <ul>
+                    <li>CNS-23-46326: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=2346326">Collaborative Research: CIRC: Dev: Adaptable Realistic Benchmark Generator for Verification (ARG-V)</a>. PI: Elena Sherman (2024-2026)</li>
+                    <li>CNS-23-46327: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=2346327">Collaborative Research: CIRC: Dev: Adaptable Realistic Benchmark Generator for Verification (ARG-V)</a>. PI: Robert Dyer (2024-2026)</li>
                     <li>CNS-18-23357: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823357">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Elena Sherman (2018-2020)</li>
                     <li>CNS-18-23294: <a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1823294">CRI: CI-P: Collaborative: Towards a Program Analysis Collaboratory</a>. PI: Robert Dyer (2018-2020)</li>
                 </ul>
