--- a/website/templates/website/selections/create.html
+++ b/website/templates/website/selections/create.html
@@ -68,7 +68,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            Or you can <a href="{% url 'website:create_manual_selection' %}">manually list all projects URLs to create a selection</a>.
+            Or you can <a href="{% url 'website:create_manual_selection' %}">manually list project URLs to create a selection</a>.
         </div>
     </div>
 </div>
