--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -98,10 +98,10 @@
 {% block script %}{% endblock %}
 <footer class="footer">
     <p class="text-muted">
-        Copyright &copy; 2018&ndash;2020, Boise State University and University of Nebraska&mdash;Lincoln. All rights reserved.
+        Copyright &copy; 2018&ndash;2024, Boise State University and University of Nebraska&mdash;Lincoln. All rights reserved.
     </p>
     <p style="margin-top: 0.3em;" class="text-muted">
-        This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS&ndash;18&ndash;23357, CNS&ndash;18&ndash;23294.
+        This material is based upon work supported by the US National Science Foundation (NSF) under grants CNS&ndash;23&ndash;46326, CNS&ndash;23&ndash;46327, CNS&ndash;18&ndash;23357, CNS&ndash;18&ndash;23294.
     </p>
     <p style="margin-top: 0.3em;" class="text-muted">
         Any opinions, findings, and conclusions or recommendations expressed in this material are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
