--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -1,6 +1,6 @@
 {% extends 'website/base.html' %}
 {% load calc_finished_projects %}
-{% load staticfiles %}
+{% load static %}
 {% load humanize %}
 {% block title %}Project Transformers{% endblock %}
 {% block body %}
