Renaming PAClab to ARG-V

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAClab - {% block title %}PAClab{% endblock %}</title>
+    <title>ARG-V - {% block title %}ARG-V{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" integrity="sha384-xewr6kSkq3dBbEtB6Z/3oFZmknWn7nHqhLVLrYgzEFRbU/DHSxW7K3B44yWUN60D" crossorigin="anonymous">
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'website:index' %}"> PAClab </a>
+            <a class="navbar-brand" href="{% url 'website:index' %}"> ARG-V </a>
         </div>
 
         <!--Navbar Links-->
@@ -42,8 +42,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Source <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a target="_blank" href="https://github.com/bgsu-pal/paclab-www/">Website source code (GitHub)</a></li>
-                        <li><a target="_blank" href="https://github.com/bgsu-pal/paclab-transformer">Transformer source code (GitHub)</a></li>
+                        <li><a target="_blank" href="https://github.com/bgsu-pal/argv-www/">Website source code (GitHub)</a></li>
+                        <li><a target="_blank" href="https://github.com/bgsu-pal/argv-transformer">Transformer source code (GitHub)</a></li>
                     </ul>
                 </li>
             </ul>
