--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p>PAClab's team is very thankful for the financial support provided to it.<p>
+                <p>ARG-V's team is very thankful for the financial support provided to it.<p>
             </div>
         </div>
         <div class="row top-buffer">
