--- a/website/templates/website/papers.html
+++ b/website/templates/website/papers.html
@@ -4,9 +4,9 @@
 {% block body %}
     <div class="container-fluid">
         {% include 'website/messages.html' %}
-        <h1>Publications related to PAClab</h1>
+        <h1>Publications related to ARG-V/PAClab</h1>
         <p>
-            If you have used PAClab in a research paper, please <a href="{% url 'website:people' %}">contact us</a> and let us know so we can include the publication in this list!
+            If you have used ARG-V/PAClab in a research paper, please <a href="{% url 'website:people' %}">contact us</a> and let us know so we can include the publication in this list!
         </p>
         <div class="table-responsive">
             <table class="table table-striped">
