--- a/website/templates/website/selections/create_manual.html
+++ b/website/templates/website/selections/create_manual.html
@@ -14,7 +14,7 @@
                     <div class="col-xs-12">
                         <p>
                             Use this page to manually specify a list of Git URLs.  The generated selection will
-                            contain all projects from the list of URLs that PAClab is able to clone.
+                            contain all projects from the list of URLs that ARG-V is able to clone.
                         </p>
                     </div>
                 </div>
