--- a/website/templates/website/transforms/shared_email.html
+++ b/website/templates/website/transforms/shared_email.html
@@ -1,1 +1,1 @@
-<p>{{ user }} has shared a <a href="{{ url }}">project transform</a> with you on PAClab.</p>
+<p>{{ user }} has shared a <a href="{{ url }}">project transform</a> with you on ARG-V.</p>
