--- a/website/templates/website/policies/agreement/terms.html
+++ b/website/templates/website/policies/agreement/terms.html
@@ -2,7 +2,7 @@
 
 <h2>1. User's Acknowledgment and Acceptance of Terms</h2>
 
-<p>PAClab (&quot;Us&quot; or &quot;We&quot;) provides the PAClab site and various
+<p>ARG-V (&quot;Us&quot; or &quot;We&quot;) provides the ARG-V site and various
 related services (collectively, the &quot;site&quot;) to you, the user, subject
 to your compliance with all the terms, conditions, and notices contained or
 referenced herein (the &quot;Terms of Use&quot;), as well as any other written
@@ -155,7 +155,7 @@ site. This includes message boards, chat, and other original content.</p>
 <p>By accepting these Terms of Use, you acknowledge and agree that all content
 presented to you on this site is protected by copyrights, trademarks, service
 marks, patents or other proprietary rights and laws, and is the sole property
-of PAClab and/or its Affiliates. You are only permitted to use the content as
+of ARG-V and/or its Affiliates. You are only permitted to use the content as
 expressly authorized by us or the specific content provider. Except for a
 single copy made for personal use only, you may not copy, reproduce, modify,
 republish, upload, post, transmit, or distribute any documents or information
@@ -174,10 +174,10 @@ posted on this site infringes on any patent, trademark, trade secret,
 copyright, right of publicity, or other proprietary right of any party.</p>
 
 <p>All custom graphics, icons, logos and service names are registered
-trademarks, trademarks or service marks of PAClab or its Affiliates. All other
+trademarks, trademarks or service marks of ARG-V or its Affiliates. All other
 trademarks or service marks are property of their respective owners. Nothing in
 these Terms of Use grants you any right to use any trademark, service mark,
-logo, and/or the name of PAClab or its Affiliates.</p>
+logo, and/or the name of ARG-V or its Affiliates.</p>
 
 <h2>7. Unauthorized Use of Materials</h2>
 
@@ -221,7 +221,7 @@ COMPUTER SYSTEM OR LOSS OF DATA THAT RESULTS FROM SUCH ACTIVITIES.</p>
 judgments of an information provider, site user, or other person or entity not
 connected with us. We do not endorse, nor are we responsible for the accuracy
 or reliability of, any opinion, advice, or statement made by anyone other than
-an authorized PAClab spokesperson speaking in his/her official capacity. Please
+an authorized ARG-V spokesperson speaking in his/her official capacity. Please
 refer to the specific editorial policies posted on various sections of this
 site for further information, which policies are incorporated by reference into
 these Terms of Use.</p>
@@ -325,7 +325,7 @@ Nebraska with respect to such matters.</p>
 
 <p>All notices to a party shall be in writing and shall be made either via
 email or conventional mail. Notices to us must be sent to the attention of
-<a href="{% url 'website:people' %}">an admin</a>, if by email, or to PAClab,
+<a href="{% url 'website:people' %}">an admin</a>, if by email, or to ARG-V,
 103E Avery Hall, University of Nebraska&mdash;Lincoln, Lincoln NE 68588 if by
 conventional mail. Notices to you may be sent to the address supplied by you as
 part of your Registration Data. In addition, we may broadcast notices or
