--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -140,7 +140,7 @@
                     <h3 class="panel-title">Share this project transform</h3>
                 </div>
                 <div class="panel-body">
-                    <p>Enter any email address or a PAClab username to share this project transform.</p>
+                    <p>Enter any email address or a ARG-V username to share this project transform.</p>
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% include 'website/form.html' %}
