--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -42,8 +42,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Source <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a target="_blank" href="https://github.com/bgsu-pal/argv-www/">Website source code (GitHub)</a></li>
-                        <li><a target="_blank" href="https://github.com/bgsu-pal/argv-transformer">Transformer source code (GitHub)</a></li>
+                        <li><a target="_blank" href="https://github.com/unl-pal/argv-www/">Website source code (GitHub)</a></li>
+                        <li><a target="_blank" href="https://github.com/unl-pal/argv-transformer">Transformer source code (GitHub)</a></li>
                     </ul>
                 </li>
             </ul>
