--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -126,16 +126,16 @@
                 {% endif %}
             </div>
         </div>
-        {% if form %}
+        {% if share_form %}
             <div class="panel panel-warning">
                 <div class="panel-heading">
                     <h3 class="panel-title">Share this project transform</h3>
                 </div>
                 <div class="panel-body">
-                    <p>Enter any email address or a ARG-V username to share this project transform.</p>
+                    <p>Enter any email address or an ARG-V username to share this project transform.</p>
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {% include 'website/form.html' %}
+                        {% include 'website/form.html' with form=share_form %}
                         <button class="btn btn-primary">Share</button>
                     </form>
                 </div>
